--- a/metrics-app/helm/deployment.yaml
+++ b/metrics-app/helm/deployment.yaml
@@ -4,7 +4,7 @@ kind: Deployment
 metadata:
   name: counter-app
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: counter
@@ -21,8 +21,8 @@ spec:
        
         resources:
           requests:
-            memory: "256Mi"
+            memory: "2Gi"
             cpu: "100m"
           limits:
-            memory: "512Mi"
+            memory: "2Gi"
             cpu: "500m"
